[package]
name = "casper-node-macros"
version = "1.3.3"
authors = ["Marc Brinkmann <marc@casperlabs.io>"]
edition = "2018"
description = "A macro to create reactor implementations for the casper-node."
readme = "README.md"
documentation = "https://docs.rs/casper-node-macros"
homepage = "https://casper.network"
repository = "https://github.com/casper-network/casper-node/tree/dev/node_macros"
license-file = "../LICENSE"

[dependencies]
indexmap = "1.6.0"
Inflector = "0.11.4"
proc-macro2 = "1.0.21"
quote = "1.0.8"
syn = { version = "1.0.40", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
