[package]
name = "casper-node-macros"
version = "1.4.3"
authors = ["Marc Brinkmann <marc@casperlabs.io>"]
edition = "2018"
description = "A macro to create reactor implementations for the casper-node."
readme = "README.md"
documentation = "https://docs.rs/casper-node-macros"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/casper-node/tree/master/node_macros"
license = "Apache-2.0"

[dependencies]
indexmap = "1.6.0"
Inflector = "0.11.4"
proc-macro2 = "1.0.21"
quote = "1.0.8"
syn = { version = "1.0.40", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
