[package]
name = "casper-storage"
version = "1.4.3"
edition = "2018"
description = "A library providing global state functionality."
readme = "README.md"
documentation = "https://docs.rs/casper-storage"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/casper-node/tree/master/storage"
license = "Apache-2.0"

[dependencies]
bincode = "1.3.1"
casper-hashing = { version = "1.4.3", path = "../hashing" }
casper-types = { version = "1.5.0", path = "../types", features = ["datasize", "json-schema"] }
datasize = "0.2.4"
lmdb = "0.8"
num = { version = "0.4.0", default-features = false }
once_cell = "1"
proptest = { version = "1.0.0", optional = true }
serde = { version = "1", features = ["derive"] }
tempfile = "3.1.0"
thiserror = "1.0.18"
tracing = "0.1.18"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "1.0.33"
proptest = "1.0.0"
rand = "0.8.3"
serde_json = "1"

[features]
default = ["gens"]
gens = ["casper-types/testing", "proptest"]
