[package]
name = "casper-storage"
version = "1.4.3"
edition = "2018"
description = "Storage for a node on the Casper network."
readme = "README.md"
documentation = "https://docs.rs/casper-storage"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/casper-node/tree/master/storage"
license = "Apache-2.0"

[dependencies]
bincode = "1.3.1"
casper-types = { version = "3.0.0", path = "../types", features = ["datasize", "json-schema", "std"] }
datasize = "0.2.4"
either = "1.8.1"
lmdb-rkv = "0.14"
num = { version = "0.4.0", default-features = false }
num-derive = "0.3.0"
num-rational = { version = "0.4.0", features = ["serde"] }
num-traits = "0.2.10"
proptest = { version = "1.0.0", optional = true }
serde = { version = "1", features = ["derive"] }
tempfile = "3.1.0"
thiserror = "1.0.18"
tracing = "0.1.18"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
linked-hash-map = "0.5.3"
once_cell = "1.18.0"
rand = "0.8.3"
rand_chacha = "0.3.0"
itertools = "0.10.5"

[dev-dependencies]
assert_matches = "1.3.0"
anyhow = "1.0.33"
casper-types = { path = "../types", features = ["testing"] }
proptest = "1.0.0"
rand = "0.8.3"
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
