[package]
name = "casper-types"
version = "1.5.0" # when updating, also update 'html_root_url' in lib.rs
authors = ["Fraser Hutchison <fraser@casperlabs.io>"]
edition = "2018"
description = "Types shared by many casper crates for use on the Casper network."
readme = "README.md"
documentation = "https://docs.rs/casper-types"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/casper-node/tree/master/types"
license = "Apache-2.0"

[dependencies]
base16 = { version = "0.2.1", default-features = false, features = ["alloc"] }
base64 = { version = "0.13.0", default-features = false }
bitflags = "1"
blake2 = { version = "0.9.0", default-features = false }
datasize = { version = "0.2.4", optional = true }
ed25519-dalek = { version = "1.0.0", default-features = false, features = ["rand", "u64_backend"] }
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
hex_fmt = "0.3.0"
k256 = { version = "0.7.2", default-features = false, features = ["ecdsa", "zeroize"] }
num = { version = "0.4.0", default-features = false, features = ["alloc"] }
num-derive = { version = "0.3.0", default-features = false }
num-integer = { version = "0.1.42", default-features = false }
num-rational = { version = "0.4.0", default-features = false }
num-traits = { version = "0.2.10", default-features = false }
once_cell = { version = "1.5.2", optional = true }
proptest = { version = "1.0.0", optional = true }
rand = { version = "0.8.3", default-features = false, features = ["small_rng"] }
schemars = { version = "=0.8.5", features = ["preserve_order"], optional = true }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_bytes = { version = "0.11.5", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.59", default-features = false, features = ["alloc"] }
uint = { version = "0.9.0", default-features = false }
version-sync = { version = "0.9", optional = true }

[dev-dependencies]
bincode = "1.3.1"
criterion = "0.3.5"
getrandom = { version = "0.2.0", features = ["rdrand"] }
proptest = "1.0.0"
proptest-attr-macro = "1.0.0"
serde_json = "1.0.55"
serde_test = "1.0.117"
strum = { version = "0.21", features = ["derive"] }

[features]
json-schema = ["once_cell", "schemars"]
gens = ["proptest"]
# DEPRECATED - enabling `std` has no effect.
std = []

[[bench]]
name = "bytesrepr_bench"
harness = false
