[package]
name = "vm-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { version = "1", features = ["derive"] }
