[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
casper-types = { path = "../types" }
wasmer = "4.1.0"
wasmer-compiler-singlepass = "4.1.0"
wasmer-middlewares = "4.1.0"
wasmer-types = "4.1.0"

thiserror = "1.0.44"
criterion = "0.5.1"
borsh = "0.10.3"

blake2 = "0.10.6"
rand = "0.8.5"
digest = "0.10.7"
[[bench]]
name = "vm_call"
harness = false
