[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
casper-types = { path = "../types" }
wasmer = "4.1.0"
wasmer-compiler-singlepass = "4.1.0"
wasmer-middlewares = "4.1.0"
wasmer-types = "4.1.0"

thiserror = "1.0.44"
criterion = "0.5.1"
borsh = {version = "1.2.0", features = ["derive"] }
borsh-derive = "1.2.0"

blake2 = "0.10.6"
rand = "0.8.5"
digest = "0.10.7"
safe-transmute = "0.11.2"

num-traits = "0.2.14"
num-derive = "0.4.1"

tracing = "0.1.40"

vm-common = { path = "../vm-common"}

[[bench]]
name = "vm_call"
harness = false
