[package]
name = "casper-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
casper-types = { path = "../types" }
wasmer = { version = "4.3.1", default-features = false, features = ["singlepass"] }
wasmer-compiler-singlepass = "4.3.1"
wasmer-middlewares = "4.3.1"
wasmer-types = "4.3.1"

thiserror = "1.0.44"
criterion = "0.5.1"
borsh = {version = "1.2.0", features = ["derive"] }
borsh-derive = "1.2.0"

blake2 = "0.10.6"

digest = "0.10.7"
safe-transmute = "0.11.2"

num-traits = "0.2.18"
num-derive = "0.4.2"

tracing = "0.1.40"

vm-common = { path = "../vm-common"}
casper-storage = { path = "../storage" }

either = "1.10"

parking_lot = "0.12.1"

[dev-dependencies]
tempfile = "3.10.1"
once_cell = "1.19.0"
rand = "0.8.4"

[[bench]]
name = "vm_call"
harness = false
