[package]
authors = ["Fraser Hutchison <fraser@casperlabs.io>"]
description = "A tool to update versions of all published CasperLabs packages."
edition = "2018"
license-file = "../../LICENSE"
name = "casper-updater"
readme = "README.md"
version = "0.3.0"

[dependencies]
casper-types = { path = "../../types", default-features = false, features = ["std"] }
clap = "2"
once_cell = "1"
regex = "1"
