[package]
authors = ["Fraser Hutchison <fraser@casperlabs.io>"]
description = "A tool to update versions of all published CasperLabs packages."
edition = "2018"
license = "Apache-2.0"
name = "casper-updater"
readme = "README.md"
version = "0.3.0"

[dependencies]
casper-types = { path = "../../types" }
clap = "2"
once_cell = "1"
regex = "1"
