[package]
authors = ["Fraser Hutchison <fraser@casperlabs.io>"]
description = "A tool to update versions of all published Casper packages."
edition = "2021"
license = "Apache-2.0"
name = "casper-updater"
readme = "README.md"
version = "0.3.0"

[dependencies]
clap = { version = "4.2.7", features = ["cargo", "deprecated", "wrap_help"] }
once_cell = "1.17.1"
regex = "1.8.1"
semver = "1.0.17"
