[package]
name = "client-lib"
version = "0.1.0"
authors = ["Marc Brinkmann <marc@casperlabs.io>", "Fraser Hutchison <fraser@casperlabs.io>", "Daniel Werner <dan@casperlabs.io>"]
edition = "2018"
description = "A client library for interacting with the Casper network"
readme = "README.md"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/casper-node/tree/master/client-lib"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# remove as we factor this out of client-lib
base64 = "0.12.3"
casper-execution-engine = { version = "0.7.0", path = "../../execution_engine" }
casper-node = { version = "0.1.0", path = "../../node" }
casper-types = { version = "0.6.0", path = "../../types", features = ["std"] }
futures = "0.3.5"
hex = { version = "0.4.2", features = ["serde"] }
jsonrpc-lite = "0.5.0"
lazy_static = "1.4.0"
rand = "0.7.3"
reqwest = { version = "0.10.6", features = ["json"] }
semver = { version = "0.11.0", features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1.0.55"
thiserror = "1.0.20"
tokio = { version = "0.2.20", features = ["macros", "rt-threaded", "sync", "tcp", "time", "blocking"] }
