[package]
name = "cargo-casper"
version = "0.7.7"
authors = ["Fraser Hutchison <fraser@casperlabs.io>"]
edition = "2018"
description = "Command line tool for creating a Wasm smart contract and tests for use on the Casper network."
readme = "README.md"
documentation = "https://docs.rs/cargo-casper"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/casper-node/tree/master/execution_engine_testing/cargo_casper"
license-file = "../../LICENSE"
include = [
    "src/*.rs",
    "Cargo.lock",
    "Cargo.toml",
]

[dependencies]
clap = "2"
colour = "0.5"
once_cell = "1.5.2"

[dev-dependencies]
assert_cmd = "1"
tempfile = "3"
toml = "0.5.7"
