[package]
name = "cargo-casper"
version = "1.3.3"
authors = ["Fraser Hutchison <fraser@casperlabs.io>"]
edition = "2018"
description = "A command line tool for creating a Wasm smart contract and tests for use on the Casper network."
readme = "README.md"
documentation = "https://docs.rs/cargo-casper"
homepage = "https://casper.network"
repository = "https://github.com/casper-network/casper-node/tree/dev/execution_engine_testing/cargo_casper"
license-file = "../../LICENSE"
include = [
    "src/*.rs",
    "Cargo.lock",
    "Cargo.toml",
    "resources/*"
]

[dependencies]
clap = "3.0.0-beta.4"
colour = "0.6"
once_cell = "1"

[dev-dependencies]
assert_cmd = "1"
tempfile = "3"
toml = "0.5.8"
